# roller_bot

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: main.rs
src/commands/: general.rs  mod.rs  roll.rs
src/core/: dice.rs  mod.rs  parse.rs  roller.rs
