[package]
name = "roller_bot"
version = "0.1.0"
authors = ["Derrek <dschuurm@ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "*"
rand = "*"
serde = { version = "1", features = ["serde_derive"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
  "builder",
  "cache",
  "framework",
  "model",
  "standard_framework", 
  "rustls_backend",
  "utils",
]